	PR middle-end/38771 	* fold-const.c (fold_unary): For COMPOUND_EXPR and COND_EXPR, 	fold_convert arg0 operands to TREE_TYPE (op0) first.

* gcc.c-torture/compile/pr38771.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@143202 138bc75d-0d04-0410-961f-82ee72b054a4