gcc/testsuite/gcc.c-torture/compile/pr38771.c
@@ -1,0 +1,7 @@
+/* PR middle-end/38771 */
+
+unsigned long long
+foo (long long x)
+{
+  return -(unsigned long long) (x ? : x);
+}
